fix scrollbar

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -46,20 +46,14 @@
 }
 
 .messages {
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
-
-    // ::-webkit-scrollbar-thumb {
-    //     background: red; 
-    //     border-radius: 10px;
-    //   }
     
     display: flex;
     width: 100%;
     height: 504px;
     padding: var(--spacer-s, 24px);
     flex-direction: column;
-    justify-content: flex-end;
     align-items: flex-start;
     gap: var(--spacer-xxs, 8px);
 
@@ -67,6 +61,11 @@
     background-image: url("../../public/img/bg-book.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.customScrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
 }
 
 .sidebar {
