--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -13,7 +13,7 @@
 }
 
 .image {
-    width: 30vw;
+    width: 25vw;
     height: 30vh;
     background-image: url(../../public/img/bg-book.jpg);
     background-repeat: no-repeat;
@@ -39,23 +39,6 @@
 .h1 {
     font-size: 2rem;
     margin: 0;
-}
-
-// .h {
-//     margin: 0;
-
-//     color: #AB5D46;
-//     font-size: 4rem;
-//     font-weight: 700;
-    
-//     transform: rotate(-10.953deg);
-//     position: relative;
-//     bottom: 7vh;
-//     left: 1vw;
-// }
-
-.error {
-    color: red;
 }
 
 .input {
